adding js and updated styling

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <body>
         <nav>
             <div id="nav">
-                <div class="left">
+                <div class="score">
                     <a class="highscoreLink" onclick='getScore()' href='#'>
-                        <h4><strong>View Highscore</strong></h4>
+                        <h4>View Highscore</h4>
                     </a>
                 </div>
-                <div class="right">
+                <div class="time">
                     <h4>Time: <span id='timeLeft'>0</span></h4>
                 </div>
             </div>
