--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <main>
             <div id="container">
                 <div id="quizBody">
-                    <h1>Coding Quiz!</h1>
+                    <h1>JavaScript Quiz</h1>
                     <h3>Click Start Quiz to begin!</h3>
                     <button onclick="start()">Start Quiz</button>
                 </div>
